# lcdiff

./: .gitignore  Cargo.toml  README.md  SPEC.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  linux-release.yml  release.yml  (+2 more)
crates/jdiff-cli/: Cargo.toml
crates/jdiff-cli/src/: main.rs
crates/jdiff-cli/tests/: cli_smoke.rs
crates/lcdiff-cli/: Cargo.toml
crates/lcdiff-cli/src/: main.rs
crates/lcdiff-cli/tests/: cli_smoke.rs
crates/ldiff-cli/: Cargo.toml
crates/ldiff-cli/src/: main.rs
crates/ldiff-cli/tests/: cli_smoke.rs
docker/: Dockerfile  build-linux-docker.sh  build-linux-matrix.sh  run-linux-docker.sh
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GLOSSARY.md  JDIFF_COMPLETION_AUDIT.md  JDIFF_IMPLEMENTATION_PLAN.md  LCDIFF_COMPLETION_AUDIT.md  LCDIFF_IMPLEMENTATION_PLAN.md  LDIFF_COMPLETION_AUDIT.md  LDIFF_IMPLEMENTATION_PLAN.md  OPERATIONS_MACOS.md  PLATFORM_VALIDATION.md  README.md  RELEASING.md  TEST_MATRIX.md
platform-validation/: macos-distribution-aarch64-apple-darwin-20260605T133311Z.md  macos-distribution-aarch64-apple-darwin-20260606T045612Z.md  macos-distribution-aarch64-apple-darwin-20260606T051017Z.md  macos-distribution-aarch64-apple-darwin-20260606T051217Z.md  macos-distribution-aarch64-apple-darwin-20260630T114835Z.md
scripts/: README.md  assemble-sidecar-resources.sh  build-jlink-runtime.sh  build-linux.sh  build-windows.ps1  install-linux.sh  install-macos.sh  launch-linux-xwayland.sh  notarize-macos-app.sh  package-macos-dmg.sh  screenshot-redesign.mjs  sign-macos-bundle.sh  sign-windows-bundles.ps1  test-sidecar-smoke.mjs  test-sidecar-smoke.sh  verify-branding.mjs  verify-ci-workflow.mjs  verify-docs.mjs  verify-frontend-invariants.mjs  verify-frontend-render.mjs  verify-linux-display-matrix.sh  verify-macos-distribution.sh  verify-packaging-scripts.mjs  verify-release-workflow.mjs  verify-remote-release-workflow.sh  verify-windows-platform.ps1
sidecar/: README.md  pom.xml
src/: App.test.tsx  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.md
src-tauri/src/: main.rs  sidecar_process.rs  system_fonts.rs
(+161 files in other folders)
