[package]
name = "lcdiff-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
lcdiff-core = { path = "../lcdiff-core" }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
zip.workspace = true
