[package]
name = "ldiff-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ldiff-core = { path = "../ldiff-core" }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
zip.workspace = true
